backend/finalParser.py
# Generated from final.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class finalParser ( Parser ):

    grammarFileName = "final.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'='", "'*='", "'+='", "'-='", "'/='", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", "'||'", 
                     "'!'", "'++'", "'--'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "';'", "','", "'&'", "'if'", "'so'", 
                     "'else'", "'until'", "'loop'", "'do'", "'return'", 
                     "'int'", "'float'", "'char'", "'selector'", "'select'", 
                     "'other'", "':'", "'read'", "'write'", "'break'" ]

    symbolicNames = [ "<INVALID>", "WS", "PLUS", "MINUS", "MULT", "DIV", 
                      "MOD", "ASSIGN", "MULTASGN", "ADDASGN", "SUBASGN", 
                      "DIVASGN", "EQ", "NEQ", "LT", "GT", "LTE", "GTE", 
                      "AND", "OR", "NOT", "INC", "DEC", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMICOLON", 
                      "COMMA", "FORAND", "IF", "SO", "ELSE", "UNTIL", "LOOP", 
                      "DO", "RETURN", "INT_TYPE", "FLOAT_TYPE", "CHAR_TYPE", 
                      "SELECTOR", "SELECT", "OTHER", "COLON", "READ", "WRITE", 
                      "BREAK", "INT", "FLOAT", "STRING", "CHAR", "ID" ]

    RULE_prog = 0
    RULE_declaration = 1
    RULE_variableDeclaration = 2
    RULE_variableDeclarator = 3
    RULE_typeSpecifier = 4
    RULE_functionDeclaration = 5
    RULE_parameterList = 6
    RULE_parameter = 7
    RULE_compoundStatement = 8
    RULE_statement = 9
    RULE_expressionStatement = 10
    RULE_if_soStatement = 11
    RULE_untilStatement = 12
    RULE_loopStatement = 13
    RULE_selectorStatement = 14
    RULE_selectStatement = 15
    RULE_otherStatement = 16
    RULE_returnStatement = 17
    RULE_readStatement = 18
    RULE_writeStatement = 19
    RULE_expression = 20
    RULE_assignmentExpression = 21
    RULE_logicalOrExpression = 22
    RULE_logicalAndExpression = 23
    RULE_equalityExpression = 24
    RULE_relationalExpression = 25
    RULE_additiveExpression = 26
    RULE_multiplicativeExpression = 27
    RULE_unaryExpression = 28
    RULE_primaryExpression = 29

    ruleNames =  [ "prog", "declaration", "variableDeclaration", "variableDeclarator", 
                   "typeSpecifier", "functionDeclaration", "parameterList", 
                   "parameter", "compoundStatement", "statement", "expressionStatement", 
                   "if_soStatement", "untilStatement", "loopStatement", 
                   "selectorStatement", "selectStatement", "otherStatement", 
                   "returnStatement", "readStatement", "writeStatement", 
                   "expression", "assignmentExpression", "logicalOrExpression", 
                   "logicalAndExpression", "equalityExpression", "relationalExpression", 
                   "additiveExpression", "multiplicativeExpression", "unaryExpression", 
                   "primaryExpression" ]

    EOF = Token.EOF
    WS=1
    PLUS=2
    MINUS=3
    MULT=4
    DIV=5
    MOD=6
    ASSIGN=7
    MULTASGN=8
    ADDASGN=9
    SUBASGN=10
    DIVASGN=11
    EQ=12
    NEQ=13
    LT=14
    GT=15
    LTE=16
    GTE=17
    AND=18
    OR=19
    NOT=20
    INC=21
    DEC=22
    LPAREN=23
    RPAREN=24
    LBRACE=25
    RBRACE=26
    LBRACK=27
    RBRACK=28
    SEMICOLON=29
    COMMA=30
    FORAND=31
    IF=32
    SO=33
    ELSE=34
    UNTIL=35
    LOOP=36
    DO=37
    RETURN=38
    INT_TYPE=39
    FLOAT_TYPE=40
    CHAR_TYPE=41
    SELECTOR=42
    SELECT=43
    OTHER=44
    COLON=45
    READ=46
    WRITE=47
    BREAK=48
    INT=49
    FLOAT=50
    STRING=51
    CHAR=52
    ID=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(finalParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(finalParser.DeclarationContext,i)


        def getRuleIndex(self):
            return finalParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = finalParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3848290697216) != 0):
                self.state = 60
                self.declaration()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(finalParser.VariableDeclarationContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(finalParser.FunctionDeclarationContext,0)


        def getRuleIndex(self):
            return finalParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = finalParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.functionDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(finalParser.TypeSpecifierContext,0)


        def variableDeclarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(finalParser.VariableDeclaratorContext)
            else:
                return self.getTypedRuleContext(finalParser.VariableDeclaratorContext,i)


        def SEMICOLON(self):
            return self.getToken(finalParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(finalParser.COMMA)
            else:
                return self.getToken(finalParser.COMMA, i)

        def getRuleIndex(self):
            return finalParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = finalParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.typeSpecifier()
            self.state = 71
            self.variableDeclarator()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 72
                self.match(finalParser.COMMA)
                self.state = 73
                self.variableDeclarator()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(finalParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclaratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(finalParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(finalParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(finalParser.ExpressionContext,0)


        def getRuleIndex(self):
            return finalParser.RULE_variableDeclarator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclarator" ):
                listener.enterVariableDeclarator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclarator" ):
                listener.exitVariableDeclarator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclarator" ):
                return visitor.visitVariableDeclarator(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclarator(self):

        localctx = finalParser.VariableDeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclarator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(finalParser.ID)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 82
                self.match(finalParser.ASSIGN)
                self.state = 83
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(finalParser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(finalParser.FLOAT_TYPE, 0)

        def CHAR_TYPE(self):
            return self.getToken(finalParser.CHAR_TYPE, 0)

        def getRuleIndex(self):
            return finalParser.RULE_typeSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSpecifier" ):
                listener.enterTypeSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSpecifier" ):
                listener.exitTypeSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSpecifier" ):
                return visitor.visitTypeSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def typeSpecifier(self):

        localctx = finalParser.TypeSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typeSpecifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3848290697216) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(finalParser.TypeSpecifierContext,0)


        def ID(self):
            return self.getToken(finalParser.ID, 0)

        def LPAREN(self):
            return self.getToken(finalParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(finalParser.RPAREN, 0)

        def compoundStatement(self):
            return self.getTypedRuleContext(finalParser.CompoundStatementContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(finalParser.ParameterListContext,0)


        def getRuleIndex(self):
            return finalParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDeclaration" ):
                return visitor.visitFunctionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def functionDeclaration(self):

        localctx = finalParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.typeSpecifier()
            self.state = 89
            self.match(finalParser.ID)
            self.state = 90
            self.match(finalParser.LPAREN)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3848290697216) != 0):
                self.state = 91
                self.parameterList()


            self.state = 94
            self.match(finalParser.RPAREN)
            self.state = 95
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(finalParser.ParameterContext)
            else:
                return self.getTypedRuleContext(finalParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(finalParser.COMMA)
            else:
                return self.getToken(finalParser.COMMA, i)

        def getRuleIndex(self):
            return finalParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = finalParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.parameter()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 98
                self.match(finalParser.COMMA)
                self.state = 99
                self.parameter()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(finalParser.TypeSpecifierContext,0)


        def ID(self):
            return self.getToken(finalParser.ID, 0)

        def getRuleIndex(self):
            return finalParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = finalParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.typeSpecifier()
            self.state = 106
            self.match(finalParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompoundStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(finalParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(finalParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(finalParser.StatementContext)
            else:
                return self.getTypedRuleContext(finalParser.StatementContext,i)


        def getRuleIndex(self):
            return finalParser.RULE_compoundStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundStatement" ):
                listener.enterCompoundStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompoundStatement" ):
                listener.exitCompoundStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompoundStatement" ):
                return visitor.visitCompoundStatement(self)
            else:
                return visitor.visitChildren(self)




    def compoundStatement(self):

        localctx = finalParser.CompoundStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_compoundStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(finalParser.LBRACE)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17671183964045324) != 0):
                self.state = 109
                self.statement()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(finalParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionStatement(self):
            return self.getTypedRuleContext(finalParser.ExpressionStatementContext,0)


        def compoundStatement(self):
            return self.getTypedRuleContext(finalParser.CompoundStatementContext,0)


        def if_soStatement(self):
            return self.getTypedRuleContext(finalParser.If_soStatementContext,0)


        def untilStatement(self):
            return self.getTypedRuleContext(finalParser.UntilStatementContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(finalParser.LoopStatementContext,0)


        def selectorStatement(self):
            return self.getTypedRuleContext(finalParser.SelectorStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(finalParser.ReturnStatementContext,0)


        def readStatement(self):
            return self.getTypedRuleContext(finalParser.ReadStatementContext,0)


        def writeStatement(self):
            return self.getTypedRuleContext(finalParser.WriteStatementContext,0)


        def declaration(self):
            return self.getTypedRuleContext(finalParser.DeclarationContext,0)


        def getRuleIndex(self):
            return finalParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = finalParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 3, 20, 21, 22, 23, 29, 49, 50, 51, 52, 53]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.expressionStatement()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.compoundStatement()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.if_soStatement()
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 4)
                self.state = 120
                self.untilStatement()
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 5)
                self.state = 121
                self.loopStatement()
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 6)
                self.state = 122
                self.selectorStatement()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 7)
                self.state = 123
                self.returnStatement()
                pass
            elif token in [46]:
                self.enterOuterAlt(localctx, 8)
                self.state = 124
                self.readStatement()
                pass
            elif token in [47]:
                self.enterOuterAlt(localctx, 9)
                self.state = 125
                self.writeStatement()
                pass
            elif token in [39, 40, 41]:
                self.enterOuterAlt(localctx, 10)
                self.state = 126
                self.declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(finalParser.SEMICOLON, 0)

        def expression(self):
            return self.getTypedRuleContext(finalParser.ExpressionContext,0)


        def getRuleIndex(self):
            return finalParser.RULE_expressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStatement" ):
                return visitor.visitExpressionStatement(self)
            else:
                return visitor.visitChildren(self)




    def expressionStatement(self):

        localctx = finalParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expressionStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 17451448571789324) != 0):
                self.state = 129
                self.expression()


            self.state = 132
            self.match(finalParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_soStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(finalParser.IF, 0)

        def LPAREN(self):
            return self.getToken(finalParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(finalParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(finalParser.RPAREN, 0)

        def SO(self):
            return self.getToken(finalParser.SO, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(finalParser.StatementContext)
            else:
                return self.getTypedRuleContext(finalParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(finalParser.ELSE, 0)

        def getRuleIndex(self):
            return finalParser.RULE_if_soStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_soStatement" ):
                listener.enterIf_soStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_soStatement" ):
                listener.exitIf_soStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_soStatement" ):
                return visitor.visitIf_soStatement(self)
            else:
                return visitor.visitChildren(self)




    def if_soStatement(self):

        localctx = finalParser.If_soStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_if_soStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(finalParser.IF)
            self.state = 135
            self.match(finalParser.LPAREN)
            self.state = 136
            self.expression()
            self.state = 137
            self.match(finalParser.RPAREN)
            self.state = 138
            self.match(finalParser.SO)
            self.state = 139
            self.statement()
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 140
                self.match(finalParser.ELSE)
                self.state = 141
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UntilStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNTIL(self):
            return self.getToken(finalParser.UNTIL, 0)

        def LPAREN(self):
            return self.getToken(finalParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(finalParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(finalParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(finalParser.StatementContext,0)


        def getRuleIndex(self):
            return finalParser.RULE_untilStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUntilStatement" ):
                listener.enterUntilStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUntilStatement" ):
                listener.exitUntilStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUntilStatement" ):
                return visitor.visitUntilStatement(self)
            else:
                return visitor.visitChildren(self)




    def untilStatement(self):

        localctx = finalParser.UntilStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_untilStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(finalParser.UNTIL)
            self.state = 145
            self.match(finalParser.LPAREN)
            self.state = 146
            self.expression()
            self.state = 147
            self.match(finalParser.RPAREN)
            self.state = 148
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

